--- a/src/app/shared-styles/sass.scss
+++ b/src/app/shared-styles/sass.scss
@@ -66,6 +66,10 @@ section {
   padding: 0 $section-padding $section-padding;
 }
 
+strong {
+  font-weight: bold;
+}
+
 .clearfix:after {
   content: "";
   display: table;
