Set up email service

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,14 +4,15 @@
     <div class="border-bottom"></div>
   </div>
   <div class="contact-content">
-    <form action="">
+    <form action="https://formspree.io/athomas3@vt.edu" method="POST">
       <input class="input" name="name" type="text" placeholder="Name">
       <br>
-      <input class="input" name="email" type="text" placeholder="Enter email">
+      <input class="input" name="_replyto" type="text" placeholder="Enter email">
       <br>
       <textarea class="textarea" name="message" cols="30" rows="6" placeholder="Your Message"></textarea>
       <button class="submit-button">Submit</button>
     </form>
+    
     <div class="icons">
       <a href="https://www.linkedin.com/in/andrethomas5/" target="_blank"><img src="../assets/icons/linkedin.png" class="icon linkedin"></a>
       <a href="https://github.com/athomas5" target="_blank"><img src="../assets/icons/github.png" class="icon github"></a>
