--- a/src/app/contact/styles/mobile.scss
+++ b/src/app/contact/styles/mobile.scss
@@ -46,6 +46,7 @@
             font-weight: 700;
             letter-spacing: 2px;
             border-radius: 5px;
+            margin-top: 10px;
 
             &:hover {
                 background-color: $dark-red;
