Disable source code link on some projects

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -52,31 +52,36 @@
         [repoName]="'Safehouse Signs'" 
         [description]="'Worked with PHP and Wordpress while building the new eCommerce site for Safehouse Signs. Build the entire user registration and checkout process. Also worked on various frontend components while focusing on a responsive mobile first design.'"
         [imageUrl]="'../assets/images/projects/safehouse.jpg'"
-        [demoLink]="'https://safehousesigns.com'">
+        [demoLink]="'https://safehousesigns.com'"
+        [sourceCodeAvailable]="false">
       </app-project>
 
       <!-- Twitter Clone -->
       <app-project *ngIf="this.project2Active" 
         [repoName]="'Twitter-Clone'"
-        [imageUrl]="'../assets/images/projects/twitter.png'">
+        [imageUrl]="'../assets/images/projects/twitter.png'"
+        [sourceCodeAvailable]="true">
       </app-project>
 
       <!-- Translation App -->
       <app-project *ngIf="this.project3Active" 
         [repoName]="'Translation-App'"
-        [imageUrl]="'../assets/images/projects/translation-app.png'">
+        [imageUrl]="'../assets/images/projects/translation-app.png'"
+        [sourceCodeAvailable]="true">
       </app-project>
       
       <!-- ToDo -->
       <app-project *ngIf="this.project4Active" 
         [repoName]="'ToDo'"
-        [imageUrl]="'../assets/images/projects/todo.png'">
+        [imageUrl]="'../assets/images/projects/todo.png'"
+        [sourceCodeAvailable]="true">
       </app-project>
       
       <!-- Pong -->
       <app-project *ngIf="this.project5Active" 
         [repoName]="'PongGame'"
-        [imageUrl]="'../assets/images/projects/pong.png'">
+        [imageUrl]="'../assets/images/projects/pong.png'"
+        [sourceCodeAvailable]="true">
       </app-project>
       
       <!-- JCHS -->
@@ -84,7 +89,8 @@
         [repoName]="'Translation-Application'"
         [description]="'Worked with Andular 2, PHP, and Drupal while building the new website for Jefferson College of Health Sciences. This project is currently still in progress and has not gone live yet'"
         [imageUrl]="'../assets/images/projects/jchs.jpg'"
-        [demoLink]="'http://www.jchs.edu/'">
+        [demoLink]="'http://www.jchs.edu/'"
+        [sourceCodeAvailable]="false">
       </app-project>
     </div>
   </div>
