--- a/src/app/header/styles/mobile.scss
+++ b/src/app/header/styles/mobile.scss
@@ -2,7 +2,7 @@ header {
   background-image: linear-gradient($lighter-gray-gradient, $light-gray-gradient), url('../../assets/images/mountain-background.jpg');
   background-position: center;
   background-size: cover;
-  background-attachment: fixed;
+  //background-attachment: fixed;
   box-shadow: 0 5px 5px -5px $gray;
   display: flex;
   flex-direction: column;
