--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -4,6 +4,6 @@
   <img *ngIf="this.imageUrl" src={{this.imageUrl}} class="image">
   <div class="button-wrapper">
     <a *ngIf="this.sourceCodeAvailable" href={{this.sourceCodeLink}} class="button" target="_blank">Source Code</a>
-    <a href={{this.demoLink}} class="button" target="_blank">Live Demo</a>
+    <a *ngIf="this.demoAvailable" href={{this.demoLink}} class="button" target="_blank">Live Demo</a>
   </div>
 </section>
