--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,45 +4,58 @@
     <div class="border-bottom"></div>
   </div>
   <div #portfolioBelt class="portfolio-belt clearfix">
-    <div class="project-wrapper">
-      <div class="project" (click)="this.project1Active = true" (click)="showActiveProject()">
-        <img class="project-image" src="../assets/images/projects/safehouse.jpg" alt="Safehouse Signs">
-        <div class="project-overlay">
-          <strong>Safehouse Signs</strong>
+    <div #projectWrapper class="project-wrapper">
+      <a href="#portfolio">
+        <div class="project" (click)="this.project1Active = true" (click)="showActiveProject()">
+          <img class="project-image" src="../assets/images/projects/safehouse1.png" alt="Safehouse Signs">
+          <div class="project-overlay">
+            <strong>Safehouse Signs</strong>
+          </div>
         </div>
-      </div>
-      <div class="project" (click)="this.project2Active = true" (click)="showActiveProject()">
+      </a>
+      <a href="#portfolio">
+        <div class="project" (click)="this.project2Active = true" (click)="showActiveProject()">
           <img class="project-image" src="../assets/images/projects/twitter.png" alt="Twitter Clone">
           <div class="project-overlay">
             <strong>Twitter Clone</strong>
           </div>
-      </div>
-      <div class="project" (click)="this.project3Active = true" (click)="showActiveProject()">
-        <img class="project-image" src="../assets/images/projects/translation-app.png" alt="Tranlation App">
-        <div class="project-overlay">
-          <strong>Translation App</strong>
         </div>
-      </div>
-      <div class="project" (click)="this.project4Active = true" (click)="showActiveProject()">
-        <img class="project-image" src="../assets/images/projects/todo.png" alt="Todo List">
-        <div class="project-overlay">
-          <strong>ToDo List</strong>
+      </a>
+      <a href="#portfolio">
+        <div class="project" (click)="this.project3Active = true" (click)="showActiveProject()">
+          <img class="project-image" src="../assets/images/projects/translation-app.png" alt="Tranlation App">
+          <div class="project-overlay">
+            <strong>Translation App</strong>
+          </div>
         </div>
-      </div>
-      <div class="project" (click)="this.project5Active = true" (click)="showActiveProject()">
-        <img class="project-image" src="../assets/images/projects/pong.png" alt="Pong Game">
-        <div class="project-overlay">
-          <strong>Pong Game</strong>
+      </a>
+      <a href="#portfolio">
+        <div class="project" (click)="this.project4Active = true" (click)="showActiveProject()">
+          <img class="project-image" src="../assets/images/projects/todo.png" alt="Todo List">
+          <div class="project-overlay">
+            <strong>ToDo List</strong>
+          </div>
         </div>
-      </div>
-      <div class="project" (click)="this.project6Active = true" (click)="showActiveProject()">
-        <img class="project-image" src="../assets/images/projects/safehouse.jpg" alt="Jefferson College of Health Sciences">
-        <div class="project-overlay">
-          <strong>Jefferson College of Health Sciences</strong>
+      </a>
+      <a href="#portfolio">
+        <div class="project" (click)="this.project5Active = true" (click)="showActiveProject()">
+          <img class="project-image" src="../assets/images/projects/pong.png" alt="Pong Game">
+          <div class="project-overlay">
+            <strong>Pong Game</strong>
+          </div>
         </div>
-      </div>
+      </a>
+      <a href="#portfolio">
+        <div class="project" (click)="this.project6Active = true" (click)="showActiveProject()">
+          <img class="project-image" src="../assets/images/projects/jchs.png" alt="Jefferson College of Health Sciences">
+          <div class="project-overlay">
+            <strong>Jefferson College of Health Sciences</strong>
+          </div>
+        </div>
+      </a> 
     </div>
-    <div class="project-preview">
+    
+    <div #projectPreview class="project-preview">
       <div #backButton class="back-button" (click)="hideActiveProject()">
         <app-svg [svgName]="'Back'" [style]="'dark-blue'"></app-svg>
       </div>
@@ -51,46 +64,52 @@
       <app-project *ngIf="this.project1Active" 
         [repoName]="'Safehouse Signs'" 
         [description]="'Worked with PHP and Wordpress while building the new eCommerce site for Safehouse Signs. Build the entire user registration and checkout process. Also worked on various frontend components while focusing on a responsive mobile first design.'"
-        [imageUrl]="'../assets/images/projects/safehouse.jpg'"
-        [demoLink]="'https://safehousesigns.com'"
-        [sourceCodeAvailable]="false">
+        [imageUrl]="'../assets/images/projects/safehouse2.jpg'"
+        [demoLink]="'https://safehousesigns2.com'"
+        [sourceCodeAvailable]="false"
+        [demoAvailable]="true">
       </app-project>
 
       <!-- Twitter Clone -->
       <app-project *ngIf="this.project2Active" 
         [repoName]="'Twitter-Clone'"
         [imageUrl]="'../assets/images/projects/twitter.png'"
-        [sourceCodeAvailable]="true">
+        [sourceCodeAvailable]="true"
+        [demoAvailable]="false">
       </app-project>
 
       <!-- Translation App -->
       <app-project *ngIf="this.project3Active" 
-        [repoName]="'Translation-App'"
+        [repoName]="'Translation-Application'"
         [imageUrl]="'../assets/images/projects/translation-app.png'"
-        [sourceCodeAvailable]="true">
+        [sourceCodeAvailable]="true"
+        [demoAvailable]="true">
       </app-project>
       
       <!-- ToDo -->
       <app-project *ngIf="this.project4Active" 
         [repoName]="'ToDo'"
         [imageUrl]="'../assets/images/projects/todo.png'"
-        [sourceCodeAvailable]="true">
+        [sourceCodeAvailable]="true"
+        [demoAvailable]="false">
       </app-project>
       
       <!-- Pong -->
       <app-project *ngIf="this.project5Active" 
         [repoName]="'PongGame'"
         [imageUrl]="'../assets/images/projects/pong.png'"
-        [sourceCodeAvailable]="true">
+        [sourceCodeAvailable]="true"
+        [demoAvailable]="false">
       </app-project>
       
       <!-- JCHS -->
       <app-project *ngIf="this.project6Active" 
-        [repoName]="'Translation-Application'"
+        [repoName]="'Jefferson College of Helth Sciences'"
         [description]="'Worked with Andular 2, PHP, and Drupal while building the new website for Jefferson College of Health Sciences. This project is currently still in progress and has not gone live yet'"
-        [imageUrl]="'../assets/images/projects/jchs.jpg'"
+        [imageUrl]="'../assets/images/projects/jchs.png'"
         [demoLink]="'http://www.jchs.edu/'"
-        [sourceCodeAvailable]="false">
+        [sourceCodeAvailable]="false"
+        [demoAvailable]="true">
       </app-project>
     </div>
   </div>
