--- a/src/app/project/styles/mobile.scss
+++ b/src/app/project/styles/mobile.scss
@@ -10,7 +10,12 @@
     }
 }
 
+.section-header {
+    margin: 0 45px;
+  }
+
 .image {
     width: 100%;
     height: auto;
+    margin-top: 15px;
 }
